[metadata]
name = isla
version = attr: derivationtree.__version__
author = Dominic Steinhoefel
author_email = dominic.steinhoefel@cispa.de
description = An efficient derivation tree implementation for grammar fuzzing and other applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rindPHI/derivationtree
project_urls =
    Bug Tracker = https://github.com/rindPHI/derivationtree/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Security
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    datrie>=0.8.2
    grammar-graph>=0.1.14
    graphviz>=0.20.1

[options.extras_require]
test =
    coverage>=6.5.0
    pytest>=7.2.0
dev =
    black>=22.10.0
    build>=0.9.0
    flake8>=6.0.0
    twine>=4.0.2

[options.packages.find]
where = src
